// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Player functions hideControlsBar it calls setState 1`] = `
Object {
  "isControlsBarHidden": true,
}
`;

exports[`Player functions hideControlsBarWithDelay it calls window.setTimeout and setState 1`] = `
Object {
  "autoHideControlsBarTimeout": 1,
}
`;

exports[`Player functions showControlsBar it calls window.clearTimeout, setState 1`] = `
Object {
  "isControlsBarHidden": false,
}
`;

exports[`Player handlers handleEnterFullscreenMode it calls setState 1`] = `
Object {
  "isFullscreenMode": true,
}
`;

exports[`Player handlers handleExitFullscreenMode it calls setState 1`] = `
Object {
  "isFullscreenMode": false,
}
`;

exports[`Player handlers handleLoad it calls setState 1`] = `
Object {
  "duration": 99,
}
`;

exports[`Player handlers handleMouseEnter it calls showControlsBar and setState 1`] = `
Object {
  "isFocused": true,
}
`;

exports[`Player handlers handleMouseLeave it calls hideControlsBar and setState 1`] = `
Object {
  "isFocused": false,
}
`;

exports[`Player handlers handleMute it calls mute and setState 1`] = `
Object {
  "isMuted": true,
}
`;

exports[`Player handlers handlePause it calls pause, showControlsBar, and setState 1`] = `
Object {
  "isPlaying": false,
}
`;

exports[`Player handlers handlePlay it calls play, hideControlsBar, and setState 1`] = `
Object {
  "isPlaying": true,
}
`;

exports[`Player handlers handleSeekTo it calls setState and sets player.currentTime 1`] = `
Object {
  "currentTime": 10,
}
`;

exports[`Player handlers handleTimeUpdate it calls setState 1`] = `
Object {
  "currentTime": 9,
  "isComplete": false,
}
`;

exports[`Player handlers handleUnmute it calls unmute and setState 1`] = `
Object {
  "isMuted": false,
}
`;

exports[`Player handlers handleUpdateVolumeTo it calls setState and sets player.volume 1`] = `
Object {
  "volume": 1,
}
`;

exports[`Player when ControlsBar is hidden it renders correctly 1`] = `
<div>
  <div
    className="css-3vvba5"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
  >
    <video
      height={480}
      onClick={[Function]}
      onLoadedMetadata={[Function]}
      onTimeUpdate={[Function]}
      src={undefined}
    />
  </div>
  <h3 />
</div>
`;

exports[`Player when is in fullscreen mode it renders correctly 1`] = `
<div>
  <div
    className="css-16kk46b"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
  >
    <video
      height="100%"
      onClick={[Function]}
      onLoadedMetadata={[Function]}
      onTimeUpdate={[Function]}
      src={undefined}
    />
    <div
      className="css-h8qyac Controls"
    >
      <div
        className="css-yvobmt"
      >
        <input
          className="css-1mwzs46"
          max={0}
          onChange={[Function]}
          size="0.2em"
          step="any"
          type="range"
          value={0}
        />
        <div
          className="css-bg36z2"
        />
      </div>
      <div
        className="css-12alag6"
      >
        <div
          className="css-gijb3s"
        >
          <span
            className="css-bcxn3o PlayAndPause"
            onClick={[Function]}
          >
            <svg
              className="css-diyyq9"
              color="hsla(0, 0%, 100%, 0.8)"
              height="1.2em"
              viewBox="0 0 24 24"
              width="1.2em"
            >
              <path
                d="M8 5v14l11-7z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="css-bcxn3o Sound"
            onClick={[Function]}
          >
            <svg
              className="css-diyyq9"
              color="hsla(0, 0%, 100%, 0.8)"
              height="1.2em"
              viewBox="0 0 24 24"
              width="1.2em"
            >
              <path
                d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="css-bcxn3o"
          >
            <div
              className="css-y3p3hm"
            >
              <input
                className="css-qc128d"
                max={1}
                onChange={[Function]}
                size="0.15em"
                step="any"
                type="range"
                value={1}
              />
              <div
                className="css-f8oo8k"
              />
            </div>
          </span>
          <span
            className="css-1g6ztab"
          >
            00:00:00 / 00:00:00
          </span>
        </div>
        <div
          className="css-1dsees0"
        >
          <span
            className="css-bcxn3o Fullscreen"
            onClick={[Function]}
          >
            <svg
              className="css-diyyq9"
              color="hsla(0, 0%, 100%, 0.8)"
              height="1.2em"
              viewBox="0 0 24 24"
              width="1.2em"
            >
              <path
                d="M5 16h3v3h2v-5H5v2zm3-8H5v2h5V5H8v3zm6 11h2v-3h3v-2h-5v5zm2-11V5h-2v5h5V8h-3z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <h3 />
</div>
`;

exports[`Player when is playing it renders correctly 1`] = `
<div>
  <div
    className="css-drj0bf"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
  >
    <video
      height={480}
      onClick={[Function]}
      onLoadedMetadata={[Function]}
      onTimeUpdate={[Function]}
      src={undefined}
    />
    <div
      className="css-h8qyac Controls"
    >
      <div
        className="css-yvobmt"
      >
        <input
          className="css-1mwzs46"
          max={0}
          onChange={[Function]}
          size="0.2em"
          step="any"
          type="range"
          value={0}
        />
        <div
          className="css-bg36z2"
        />
      </div>
      <div
        className="css-12alag6"
      >
        <div
          className="css-gijb3s"
        >
          <span
            className="css-bcxn3o PlayAndPause"
            onClick={[Function]}
          >
            <svg
              className="css-diyyq9"
              color="hsla(0, 0%, 100%, 0.8)"
              height="1.2em"
              viewBox="0 0 24 24"
              width="1.2em"
            >
              <path
                d="M6 19h4V5H6v14zm8-14v14h4V5h-4z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="css-bcxn3o Sound"
            onClick={[Function]}
          >
            <svg
              className="css-diyyq9"
              color="hsla(0, 0%, 100%, 0.8)"
              height="1.2em"
              viewBox="0 0 24 24"
              width="1.2em"
            >
              <path
                d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="css-bcxn3o"
          >
            <div
              className="css-y3p3hm"
            >
              <input
                className="css-qc128d"
                max={1}
                onChange={[Function]}
                size="0.15em"
                step="any"
                type="range"
                value={1}
              />
              <div
                className="css-f8oo8k"
              />
            </div>
          </span>
          <span
            className="css-1g6ztab"
          >
            00:00:00 / 00:00:00
          </span>
        </div>
        <div
          className="css-1dsees0"
        >
          <span
            className="css-bcxn3o Fullscreen"
            onClick={[Function]}
          >
            <svg
              className="css-diyyq9"
              color="hsla(0, 0%, 100%, 0.8)"
              height="1.2em"
              viewBox="0 0 24 24"
              width="1.2em"
            >
              <path
                d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <h3 />
</div>
`;

exports[`Player with medium it renders correctly 1`] = `
<div>
  <div
    className="css-drj0bf"
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
    onMouseMove={[Function]}
  >
    <video
      height={480}
      onClick={[Function]}
      onLoadedMetadata={[Function]}
      onTimeUpdate={[Function]}
      src={undefined}
    />
    <div
      className="css-h8qyac Controls"
    >
      <div
        className="css-yvobmt"
      >
        <input
          className="css-1mwzs46"
          max={0}
          onChange={[Function]}
          size="0.2em"
          step="any"
          type="range"
          value={0}
        />
        <div
          className="css-bg36z2"
        />
      </div>
      <div
        className="css-12alag6"
      >
        <div
          className="css-gijb3s"
        >
          <span
            className="css-bcxn3o PlayAndPause"
            onClick={[Function]}
          >
            <svg
              className="css-diyyq9"
              color="hsla(0, 0%, 100%, 0.8)"
              height="1.2em"
              viewBox="0 0 24 24"
              width="1.2em"
            >
              <path
                d="M8 5v14l11-7z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="css-bcxn3o Sound"
            onClick={[Function]}
          >
            <svg
              className="css-diyyq9"
              color="hsla(0, 0%, 100%, 0.8)"
              height="1.2em"
              viewBox="0 0 24 24"
              width="1.2em"
            >
              <path
                d="M3 9v6h4l5 5V4L7 9H3zm13.5 3c0-1.77-1.02-3.29-2.5-4.03v8.05c1.48-.73 2.5-2.25 2.5-4.02zM14 3.23v2.06c2.89.86 5 3.54 5 6.71s-2.11 5.85-5 6.71v2.06c4.01-.91 7-4.49 7-8.77s-2.99-7.86-7-8.77z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
          <span
            className="css-bcxn3o"
          >
            <div
              className="css-y3p3hm"
            >
              <input
                className="css-qc128d"
                max={1}
                onChange={[Function]}
                size="0.15em"
                step="any"
                type="range"
                value={1}
              />
              <div
                className="css-f8oo8k"
              />
            </div>
          </span>
          <span
            className="css-1g6ztab"
          >
            00:00:00 / 00:00:00
          </span>
        </div>
        <div
          className="css-1dsees0"
        >
          <span
            className="css-bcxn3o Fullscreen"
            onClick={[Function]}
          >
            <svg
              className="css-diyyq9"
              color="hsla(0, 0%, 100%, 0.8)"
              height="1.2em"
              viewBox="0 0 24 24"
              width="1.2em"
            >
              <path
                d="M7 14H5v5h5v-2H7v-3zm-2-4h2V7h3V5H5v5zm12 7h-3v2h5v-5h-2v3zM14 5v2h3v3h2V5h-5z"
              />
              <path
                d="M0 0h24v24H0z"
                fill="none"
              />
            </svg>
          </span>
        </div>
      </div>
    </div>
  </div>
  <h3 />
</div>
`;

exports[`Player without props it renders correctly 1`] = `null`;
